spec/test/parser/invalid/_custom/interface_bad_mods.java
public interface InterfaceBadMods {
    public native void m();
}
